--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Campo - Cidade</title>
+</head>
+<body>
+    <header>
+        <h1>A IMPORTÂNCIA DA RELAÇÃO CAMPO - CIDADE</h1>
+        <img src="campo_cidade.jpg" alt="Foto do campo com a cidade">
+        <p>A relação entre campo e cidade é uma das mais importantes na organização do espaço geográfico. Cada um desses ambientes possui características próprias, mas ambos estão interligados e se influenciam mutuamente ao longo da história.</p>
+        <nav>
+            <ul>
+                <li><a href="#cidade">O que é cidade?</a></li>
+                <li><a href="#campo">O que é campo?</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <section id="cidade" class="conteudo">
+            <h2>Os Problemas</h2>
+            <article>
+                <h3>Falta de alimentos</h3>
+                <p>ESCREVER AQUI QUAIS OS PROBLEMAS QUE A FALTA DE ALIMENTO PARA A CIDADE TRAZ</p>
+            </article>
+
+            <article>
+                <h3>Aumento dos preços</h3>
+                <p>ESCREVER AQUI OS PROBLEMAS QUE O AUMENTO DOS PREÇOS DOS ALIMENTOS TRAZ PARA A CIDADE</p>
+            </article>
+
+            <article>
+                <h3>Crise no abastecimento e logística</h3>
+                <p>ESCREVER AQUI OS PROBLEMAS QUE ISSO PODE CAUSAR</p>
+            </article>
+
+            <a href=https://www.youtube.com/watch?v=ofP_0ELi904 class="cta-button" target="_blank">Relação campo e cidade  <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
+        </section>
+
+        <section id="consequencias" class="conteudo">
+            <h2>Consequências</h2>
+            <ul>
+                <li>COLOCAR NO MINÍMO 6 CONSEQUÊNCIA 1</li>
+                <li>CONSEQUÊNCIA 2</li>
+                <li>CONSEQUÊNCIA 3</li>
+                <li>CONSEQUÊNCIA 4</li>
+                <li>CONSEQUÊNCIA 5</li>
+                <li>CONSEQUÊNCIA 6</li>
+            </ul>
+        </section>
+
+        <section id="campo" class="conteudo">
+            <h2>Conclusão</h2>
+            <p>A força da cidade nasce na terra fértil do campo.</p>
+        <iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/AwNEA-MBj9M&quot;
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen>
+</iframe>
+
+        </section>
+
+    </main>
+
+    <footer>
+        <a href="https://www.youtube.com/watch?v=AwNEA-MBj9M&quot; target="_blank">
+</a>
+
+        <p>2025 | @reeberth</p>
+    </footer>
+</body>
+</html>
